# Vocabulary-Go

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
flask/: Dockerfile  babel.cfg  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  uwsgi.ini  webpack.config.js
flask/app/: .env.example  __init__.py  config.py  settings.json
flask/app/generator/: __init__.py  api_config.py  api_key_manager.py  config.py  english_helper.py  gemini_english_helper.py
flask/app/models/: __init__.py  libraries.py  sentences.py  users.py  words.py
flask/app/templates/: base.html  card.html  error.html  index.html  library.html  library_create.html  library_edit.html  library_edit_select.html  sentence_test.html  word_test.html
flask/app/templates/account_sys/: forgot_password.html  login.html  profile.html  register.html  reset_password.html  settings.html  verify_email.html
flask/app/templates/admin/: base_view.html  create.html  details.html  index.html  list.html
flask/app/templates/smtp/: reset_password.html  verify_email.html
flask/app/utils/: admin.py  checker.py  forms.py  image_processing.py  initialize.py  localization.py  login_manager.py  oauth.py  rate_limiter.py  secret.py  smtp.py
flask/app/views/: account_sys.py  api.py  error_handler.py  mail.py  main.py
flask/migrations/versions/: 6a0d556a17ee_update_user_token_max_char.py
flask/tests/: conftest.py  test_accounts.py  test_api.py  test_auth.py  test_errors.py  test_generator.py  test_image_processing.py  test_main.py  test_secret.py
(+30 files in other folders)
